Add initial code from tutorial.  It builds!
https://developer.mozilla.org/en-US/docs/WebAssembly/Rust_to_wasm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,12 @@
 name = "rasm"
 version = "0.1.0"
 authors = ["Zak Patterson <pattersonzak@gmail.com>"]
+description = "A sample project with wasm-pack"
+license = "MIT/Apache-2.0"
+repository = "https://github.com/zakpatterson/rasm"
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = "0.2"
